ADD: Update Makefile and tests

--- a/hws/hw4/Makefile
+++ b/hws/hw4/Makefile
@@ -1,10 +1,7 @@
-# -Wall turns on all warnings
-# -g2012 selects the 2012 version of iVerilog
 IVERILOG=iverilog -Wall -g2012 -y ./ -I ./
 VVP=vvp
 VIVADO=vivado -mode batch -source
 
-# Look up .PHONY rules for Makefiles
 .PHONY: clean submission remove_solutions
 
 MUXS=mux2.sv mux4.sv mux8.sv mux16.sv mux32.sv
@@ -19,6 +16,8 @@ test_adder: test_adder.sv $(ADDERS) adder32.sv
 test_adder_n: test_adder_n.sv $(ADDERS) adder_n.sv
 	${IVERILOG} $^ -o test_adder_n.bin && ${VVP} test_adder_n.bin
 
-# Call this to clean up all your generated files
 clean:
 	rm -f *.bin *.vcd vivado*.log vivado*.jou vivado*.str
+
+submission: clean
+	zip submission.zip Makefile *.sv README.md docs/*
