--- a/hws/5/Makefile
+++ b/hws/5/Makefile
@@ -6,6 +6,8 @@ VVP=vvp
 # Look up .PHONY rules for Makefiles
 .PHONY: clean submission
 
+ADDERS=adder_input_block.sv adder_output_block.sv adder_prefix_block.sv
+
 test_pulse_generator: test_pulse_generator.sv pulse_generator.sv
 	${IVERILOG} $^ -o test_pulse_generator.bin && ${VVP} test_pulse_generator.bin
 
@@ -16,7 +18,7 @@ test_pwm: test_pwm.sv pulse_generator.sv pwm.sv
 test_triangle_generator: test_triangle_generator.sv triangle_generator.sv
 	${IVERILOG} $^ -o test_triangle_generator.bin && ${VVP} test_triangle_generator.bin
 
-test_slt: test_slt.sv slt.sv
+test_slt: test_slt.sv slt.sv adder_n.sv $(ADDERS)
 	${IVERILOG} $^ -o test_slt.bin && ${VVP} test_slt.bin
 
 # Call this to clean up all your generated files
