ADD: R type instructions working

--- a/03_risc-v-cpu/part2/Makefile
+++ b/03_risc-v-cpu/part2/Makefile
@@ -26,8 +26,8 @@ test_distributed_ram: tests/test_distributed_ram.sv hdl/distributed_ram.sv
 	${IVERILOG} $^ -o test_distributed_ram.bin && ${VVP} test_distributed_ram.bin ${VVP_POST}
 
 # Modify the -DINITIAL_MEMORY string to change the initial memory.
-test_rv32i_system: tests/test_rv32i_system.sv asm/itypes.memh ${RV32I_SRCS}
-	${IVERILOG} -DINITIAL_MEMORY=\"asm/itypes.memh\" tests/test_rv32i_system.sv ${RV32I_SRCS} -s test_rv32i_system -o test_rv32i_system.bin && ${VVP} test_rv32i_system.bin ${VVP_POST}
+test_rv32i_system: tests/test_rv32i_system.sv asm/rtypes.memh ${RV32I_SRCS}
+	${IVERILOG} -DINITIAL_MEMORY=\"asm/rtypes.memh\" tests/test_rv32i_system.sv ${RV32I_SRCS} -s test_rv32i_system -o test_rv32i_system.bin && ${VVP} test_rv32i_system.bin ${VVP_POST}
 
 waves_rv32i_system: test_rv32i_system
 	gtkwave rv32i_system.fst -a tests/rv32i_system.gtkw
